Fixed strapline wrapping problem.

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -44,6 +44,7 @@
   position: absolute;
   left: 200px;
   top: 102px;
+  width: 650px;
 }
 
 #header .find_bar {
